Fixed duplicated comment in OpenAPI spec

--- a/jeaf-generator-test-open-api/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/products/product-services.yml
@@ -1332,12 +1332,16 @@ paths:
       parameters:
         - name: stringCodeHeader
           in: header
+          description: |
+            This is my multivalued test header
           schema:
             type: array
             items:
               type: string
         - name: longCodeQueryParam
           in: query
+          description: |
+            Multivalued query param
           schema:
             type: array
             items:
@@ -1345,6 +1349,8 @@ paths:
               format: int64
         - name: literals
           in: query
+          description: |
+            so many literals are possible
           required: true
           schema:
             type: array
@@ -1360,6 +1366,8 @@ paths:
             maxLength: 64
         - name: longValues
           in: header
+          description: |
+            long values as multivalued  header
           required: true
           schema:
             type: integer
@@ -1394,6 +1402,50 @@ paths:
     post:
       operationId: noReturnType
       parameters:
+        - name: stringCodeHeader
+          in: header
+          description: |
+            This is my multivalued test header
+          schema:
+            type: array
+            items:
+              type: string
+        - name: longCodeQueryParam
+          in: query
+          description: |
+            Multivalued query param
+          schema:
+            type: array
+            items:
+              type: integer
+              format: int64
+        - name: literals
+          in: query
+          description: |
+            so many literals are possible
+          required: true
+          schema:
+            type: array
+            minItems: 1
+            items:
+              $ref: '../base/product-base.yml#/components/schemas/BooleanLiteralsEnum'
+        - name: stringProperty
+          in: query
+          required: true
+          schema:
+            type: string
+            minLength: 32
+            maxLength: 64
+        - name: longValues
+          in: header
+          description: |
+            long values as multivalued  header
+          required: true
+          schema:
+            type: integer
+            format: int64
+            minimum: 3270
+            maximum: 4711
         - name: The-Header
           in: header
           required: true
@@ -1402,7 +1454,7 @@ paths:
       responses:
         '204':
           description: |
-            In case that a request was successful only status code 204 will be returned but no response content will be provided (aka as return type 'void' in many programming languages).
+            This method does not need to return anything
     
         '400':
           $ref: '#/components/responses/CustomErrorResponse'
