JEAF Generator Maven Plugin now support deprecation report (reportm itself is not yet implemented)

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
 		<module>jeaf-generator-maven-plugin</module>
 
 		<!-- The following modules are required to test JEAF Generator output -->
+		<module>jeaf-generator-test-deprecation-report</module>
 		<module>jeaf-generator-test-custom-extension</module>
 		<module>jeaf-generator-test-custom-extension-usage</module>
 		<module>jeaf-generator-test-message-constants</module>
