--- a/jeaf-generator-test-deprecation-report/pom.xml
+++ b/jeaf-generator-test-deprecation-report/pom.xml
@@ -59,6 +59,7 @@
 					<!-- Define what should be generated. By default nothing is generated. -->
 					<generateRESTDeprecationReport>true</generateRESTDeprecationReport>
 					<generateJavaDeprecationReport>true</generateJavaDeprecationReport>
+					<javaDeprecationReportName>My Java Deprecation Report</javaDeprecationReportName>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
