--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
 		<jeaf.rest.api.version>1.6.3</jeaf.rest.api.version>
 		<jeaf.rest.impl.version>1.6.3.1</jeaf.rest.impl.version>
 		<jeaf.test.model.version>1.0.60-SNAPSHOT</jeaf.test.model.version>
-		<jeaf.generator.messages.version>1.6.5</jeaf.generator.messages.version>
+		<jeaf.generator.messages.version>1.6.6-SNAPSHOT</jeaf.generator.messages.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
 		<spring.boot.version>2.7.8</spring.boot.version>
