Added test for relative location of deprecation report

--- a/jeaf-generator-test-deprecation-report/pom.xml
+++ b/jeaf-generator-test-deprecation-report/pom.xml
@@ -60,6 +60,7 @@
 					<generateRESTDeprecationReport>true</generateRESTDeprecationReport>
 					<generateJavaDeprecationReport>true</generateJavaDeprecationReport>
 					<javaDeprecationReportName>My Java Deprecation Report</javaDeprecationReportName>
+					<javaDeprecationReportFileName>../../../../Java_Deprecation_Report</javaDeprecationReportFileName>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
