Implemented and tested custom header filter

--- a/jeaf-generator-test-rest/pom.xml
+++ b/jeaf-generator-test-rest/pom.xml
@@ -33,6 +33,12 @@
 
 		<dependency>
 			<groupId>com.anaptecs.jeaf.rest</groupId>
+			<artifactId>jeaf-rest-resource-api</artifactId>
+			<version>${jeaf.rest.api.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.anaptecs.jeaf.rest</groupId>
 			<artifactId>jeaf-rest-composite-type-api</artifactId>
 			<version>${jeaf.rest.api.version}</version>
 		</dependency>
