--- a/jeaf-generator-test-spring-jersey/pom.xml
+++ b/jeaf-generator-test-spring-jersey/pom.xml
@@ -45,6 +45,12 @@
 
 		<dependency>
 			<groupId>com.anaptecs.jeaf.rest</groupId>
+			<artifactId>jeaf-rest-resource-api</artifactId>
+			<version>${jeaf.rest.api.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.anaptecs.jeaf.rest</groupId>
 			<artifactId>jeaf-rest-request-executor-api</artifactId>
 			<version>${jeaf.rest.api.version}</version>
 		</dependency>
