--- a/jeaf-generator-test-spring/pom.xml
+++ b/jeaf-generator-test-spring/pom.xml
@@ -14,6 +14,12 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.anaptecs.jeaf.rest</groupId>
+			<artifactId>jeaf-rest-resource-api</artifactId>
+			<version>${jeaf.rest.api.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.anaptecs.jeaf.rest</groupId>
 			<artifactId>jeaf-rest-composite-type-api</artifactId>
 			<version>${jeaf.rest.api.version}</version>
 		</dependency>
