--- a/jeaf-generator-test-jeaf-rest-proxy/pom.xml
+++ b/jeaf-generator-test-jeaf-rest-proxy/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.6.95-SNAPSHOT</version>
+		<version>1.6.95</version>
 	</parent>
 
 	<name>JEAF Generator Test JEAF REST Proxy</name>
