--- a/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
@@ -307,6 +307,9 @@ components:
           format: int64
           deprecated: true
         moreLinks:
+          description: |
+            
+            Deprecated: No good any more(since: 1.2, removed with: 3.0)
           type: array
           items:
             type: integer
@@ -385,6 +388,9 @@ components:
 
     # com.anaptecs.jeaf.junit.openapi.base.ChildAA
     ChildAA:
+      description: |
+        
+        Deprecated: Please do not use this class any longer. There are better alternatives but I do not tell you which ones.(since: 0.5, removed with: 2.0)
       deprecated: true
       allOf:
         - $ref: '#/components/schemas/ChildA'
