Added further tests for deprecations and OpenAPI

--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -262,6 +262,9 @@ paths:
     
   /products/deprecated/operation:
     get:
+      description: >-
+        
+        Deprecated: This request is no longer supported.(since: 1.1.1, removed with: 2.3)
       operationId: deprecatedOperation
       deprecated: true
       responses:
