--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,8 @@
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
 		<spring.boot.version>2.7.9</spring.boot.version>
 		<spring.core.version>5.3.25</spring.core.version>
+		
+		<log4j-to-slf4j.version>2.20.0</log4j-to-slf4j.version>
 	</properties>
 
 	<modules>
