First draft, serializers not yet adjusted

--- a/jeaf-generator-test-jeaf-rest-proxy/pom.xml
+++ b/jeaf-generator-test-jeaf-rest-proxy/pom.xml
@@ -186,6 +186,7 @@
 					<generateServiceInterfaces>true</generateServiceInterfaces>
 					<generatePOJOs>true</generatePOJOs>
 					<makePOJOsSerializable>true</makePOJOsSerializable>
+					<generateHeavyExtensibleEnums>true</generateHeavyExtensibleEnums>
 					<generateJSONSerializers>true</generateJSONSerializers>
 					<generateJacksonAnnotations>true</generateJacksonAnnotations>
 					<suppressTechnicalHeaders>true</suppressTechnicalHeaders>
