--- a/jeaf-generator-test-open-api-internal-service-objects/pom.xml
+++ b/jeaf-generator-test-open-api-internal-service-objects/pom.xml
@@ -148,6 +148,7 @@
 					<generateValidAnnotationForClasses>true</generateValidAnnotationForClasses>
 					<generateValidationAnnotationsForAssociationsFromMultiplicity>true</generateValidationAnnotationsForAssociationsFromMultiplicity>
 					<generateValidationAnnotationsForAttributesFromMultiplicity>true</generateValidationAnnotationsForAttributesFromMultiplicity>
+					<generateHeavyExtensibleEnums>true</generateHeavyExtensibleEnums>
 					
 					<enableDetailedToStringMethod>true</enableDetailedToStringMethod>
 					
