--- a/jeaf-generator-test-open-api-service-objects/pom.xml
+++ b/jeaf-generator-test-open-api-service-objects/pom.xml
@@ -136,6 +136,7 @@
 					<generateValidAnnotationForClasses>true</generateValidAnnotationForClasses>
 					<generateValidationAnnotationsForAssociationsFromMultiplicity>true</generateValidationAnnotationsForAssociationsFromMultiplicity>
 					<generateValidationAnnotationsForAttributesFromMultiplicity>true</generateValidationAnnotationsForAttributesFromMultiplicity>
+					<generateHeavyExtensibleEnums>true</generateHeavyExtensibleEnums>
 					
 					<generatePublicObjectView>true</generatePublicObjectView>
 					<enableDetailedToStringMethod>true</enableDetailedToStringMethod>
