--- a/jeaf-generator-test-pojos/pom.xml
+++ b/jeaf-generator-test-pojos/pom.xml
@@ -86,6 +86,7 @@
 					<generatePOJOs>true</generatePOJOs>
 					<generateJacksonAnnotations>true</generateJacksonAnnotations>
 					<enableSemVerForJSON>true</enableSemVerForJSON>
+					<generateHeavyExtensibleEnums>true</generateHeavyExtensibleEnums>
 
 					<suppressWarnings>JEAF_SUPPRESS_WARNINGS</suppressWarnings>
 					<addGeneratedAnnotation>true</addGeneratedAnnotation>
