--- a/jeaf-generator-test-spring-jersey/pom.xml
+++ b/jeaf-generator-test-spring-jersey/pom.xml
@@ -192,6 +192,7 @@
 					<generateJAXRSAnnotations>true</generateJAXRSAnnotations>
 					<generateServiceInterfaces>true</generateServiceInterfaces>
 					<generatePOJOs>true</generatePOJOs>
+					<generateHeavyExtensibleEnums>true</generateHeavyExtensibleEnums>
 					<generatePublicObjectView>false</generatePublicObjectView>
 					<generateValueOfForOpenAPIDataTypes>true</generateValueOfForOpenAPIDataTypes>
 					<generateJSONSerializers>true</generateJSONSerializers>
