--- a/jeaf-generator-test-spring-rest-proxy/pom.xml
+++ b/jeaf-generator-test-spring-rest-proxy/pom.xml
@@ -152,6 +152,7 @@
 					<generateServiceInterfaces>true</generateServiceInterfaces>
 					<generateJSONSerializers>true</generateJSONSerializers>
 					<generatePOJOs>true</generatePOJOs>
+					<generateHeavyExtensibleEnums>true</generateHeavyExtensibleEnums>
 					<enableDetailedToStringMethod>true</enableDetailedToStringMethod>
 					<generatePublicObjectView>true</generatePublicObjectView>
 					<generateRESTServiceProxies>true</generateRESTServiceProxies>
