--- a/jeaf-generator-test-domain-objects/pom.xml
+++ b/jeaf-generator-test-domain-objects/pom.xml
@@ -67,6 +67,7 @@
 
 					<!-- Define what should be generated. By default nothing is generated. -->
 					<generateDomainObjects>true</generateDomainObjects>
+					<generateHeavyExtensibleEnums>true</generateHeavyExtensibleEnums>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
