--- a/jeaf-generator-test-service-objects/pom.xml
+++ b/jeaf-generator-test-service-objects/pom.xml
@@ -83,6 +83,7 @@
 					<generateServiceObjects>true</generateServiceObjects>
 					<generateExceptionClasses>true</generateExceptionClasses>
 					<generateCustomConstraints>true</generateCustomConstraints>
+					<generateHeavyExtensibleEnums>true</generateHeavyExtensibleEnums>
 					
 					<customGenericSoftLinkType>com.anaptecs.jeaf.junit.openapi.base.SoftLink</customGenericSoftLinkType>
 
