--- a/jeaf-generator-test-spring/pom.xml
+++ b/jeaf-generator-test-spring/pom.xml
@@ -143,7 +143,7 @@
 					<restPathPrefix>/nova/prefix</restPathPrefix>
 					<generateServiceInterfaces>true</generateServiceInterfaces>
 					<generatePOJOs>true</generatePOJOs>
-					<generateHeavyExtensibleEnums>true</generateHeavyExtensibleEnums>
+					<generateHeavyExtensibleEnums>false</generateHeavyExtensibleEnums>
 					<generateJSONSerializers>true</generateJSONSerializers>
 					<generateJacksonAnnotations>true</generateJacksonAnnotations>
 					<enableLegacyBuilderStyle>true</enableLegacyBuilderStyle>
