--- a/jeaf-generator-test-spring-jersey/pom.xml
+++ b/jeaf-generator-test-spring-jersey/pom.xml
@@ -189,7 +189,7 @@
 					<targetRuntime>SPRING</targetRuntime>
 					<restLibrary>JAX_RS</restLibrary>
 					<generateRESTResources>true</generateRESTResources>
-					<generateRESTRequestValidation>true</generateRESTRequestValidation>
+					<generateRESTRequestValidation>false</generateRESTRequestValidation>
 					<generateRESTResponseValidation>true</generateRESTResponseValidation>
 					<generateJAXRSAnnotations>true</generateJAXRSAnnotations>
 					<generateServiceInterfaces>true</generateServiceInterfaces>
