--- a/jeaf-generator-test-spring-jersey/pom.xml
+++ b/jeaf-generator-test-spring-jersey/pom.xml
@@ -44,6 +44,12 @@
         </dependency>
 
 		<dependency>
+			<groupId>com.anaptecs.jeaf.validation</groupId>
+			<artifactId>jeaf-validation-api</artifactId>
+			<version>${jeaf.validation.api.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.anaptecs.jeaf.rest</groupId>
 			<artifactId>jeaf-rest-resource-api</artifactId>
 			<version>${jeaf.rest.api.version}</version>
