--- a/jeaf-generator-test-spring/pom.xml
+++ b/jeaf-generator-test-spring/pom.xml
@@ -14,7 +14,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.anaptecs.jeaf.validation</groupId>
-			<artifactId>jeaf-validation-api</artifactId>
+			<artifactId>jeaf-validation-api-spring</artifactId>
 			<version>${jeaf.validation.api.version}</version>
 		</dependency>
 
@@ -151,6 +151,7 @@
 					<restPathPrefix>/nova/prefix</restPathPrefix>
 					<generateServiceInterfaces>true</generateServiceInterfaces>
 					<generatePOJOs>true</generatePOJOs>
+					<generateObjectValidationInBuilder>true</generateObjectValidationInBuilder>
 					<generateHeavyExtensibleEnums>false</generateHeavyExtensibleEnums>
 					<generateJSONSerializers>true</generateJSONSerializers>
 					<generateJacksonAnnotations>true</generateJacksonAnnotations>
