--- a/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
@@ -719,6 +719,18 @@ components:
           format: double
           nullable: false
 
+    # com.anaptecs.jeaf.junit.openapi.base.IgnoringClass
+    IgnoringClass:
+      type: object
+      additionalProperties: false
+      required:
+        - age
+      properties:
+        age:
+          type: integer
+          format: int32
+          nullable: false
+
     # com.anaptecs.jeaf.junit.openapi.base.InventoryType
     InventoryType:
       type: string
