--- a/jeaf-generator-test-open-api-internal-service-objects/pom.xml
+++ b/jeaf-generator-test-open-api-internal-service-objects/pom.xml
@@ -146,6 +146,7 @@
 					<generateConstantsForAttributeNames>false</generateConstantsForAttributeNames>
 					<generateJSONSerializers>true</generateJSONSerializers>
 					<generateValidAnnotationForClasses>true</generateValidAnnotationForClasses>
+					<generateValidAnnotationForAssociations>true</generateValidAnnotationForAssociations>
 					<generateValidationAnnotationsForAssociationsFromMultiplicity>true</generateValidationAnnotationsForAssociationsFromMultiplicity>
 					<generateValidationAnnotationsForAttributesFromMultiplicity>true</generateValidationAnnotationsForAttributesFromMultiplicity>
 					<generateHeavyExtensibleEnums>true</generateHeavyExtensibleEnums>
