--- a/jeaf-generator-test-open-api-service-objects/pom.xml
+++ b/jeaf-generator-test-open-api-service-objects/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.7.4-SNAPSHOT</version>
+		<version>1.8.0</version>
 	</parent>
 
 	<name>JEAF Generator Test OpenAPI Service Objects</name>
