--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 		<jeaf.validation.impl.version>1.6.1</jeaf.validation.impl.version>
 		<jeaf.rest.api.version>1.6.6</jeaf.rest.api.version>
 		<jeaf.rest.impl.version>1.6.6</jeaf.rest.impl.version>
-		<jeaf.test.model.version>1.0.69-SNAPSHOT</jeaf.test.model.version>
+		<jeaf.test.model.version>1.0.69</jeaf.test.model.version>
 		<jeaf.generator.messages.version>1.6.7</jeaf.generator.messages.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
