--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -875,6 +875,7 @@ paths:
                   minLength: 3
                   maxLength: 3
                   example: CHF
+                nullable: true
           headers:
             X-Global-Response-Header:
               schema:
@@ -913,6 +914,7 @@ paths:
                   minLength: 3
                   maxLength: 3
                   example: CHF
+                nullable: true
           headers:
             X-Global-Response-Header:
               schema:
@@ -1293,6 +1295,7 @@ paths:
             items:
               type: number
               format: double
+            nullable: true
       responses:
         '201':
           description: >-
@@ -1323,6 +1326,7 @@ paths:
             items:
               type: number
               format: double
+            nullable: true
         - name: pEnums
           in: query
           schema:
@@ -1360,6 +1364,7 @@ paths:
             type: array
             items:
               type: string
+            nullable: true
         - name: longCodeQueryParam
           in: query
           description: >-
@@ -1369,6 +1374,7 @@ paths:
             items:
               type: integer
               format: int64
+            nullable: true
         - name: literals
           in: query
           description: >-
@@ -1432,6 +1438,7 @@ paths:
             type: array
             items:
               type: string
+            nullable: true
         - name: longCodeQueryParam
           in: query
           description: >-
@@ -1441,6 +1448,7 @@ paths:
             items:
               type: integer
               format: int64
+            nullable: true
         - name: literals
           in: query
           description: >-
